// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItemBase snapshot should match snapshot 1`] = `
<ListItemBase>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="md-list-item-base-wrapper"
        data-allow-text-select={false}
        data-disabled={false}
        data-focused={false}
        data-interactive={true}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="listitem"
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with allowTextSelection=true 1`] = `
<ListItemBase
  allowTextSelection={true}
>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="md-list-item-base-wrapper"
        data-allow-text-select={true}
        data-disabled={false}
        data-focused={false}
        data-interactive={true}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        onBlur={[Function]}
        onFocus={[Function]}
        role="listitem"
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with className 1`] = `
<ListItemBase
  className="example-class"
>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="example-class md-list-item-base-wrapper"
        data-allow-text-select={false}
        data-disabled={false}
        data-focused={false}
        data-interactive={true}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="listitem"
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with id 1`] = `
<ListItemBase
  id="example-id"
>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="md-list-item-base-wrapper"
        data-allow-text-select={false}
        data-disabled={false}
        data-focused={false}
        data-interactive={true}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        id="example-id"
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="listitem"
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with interactive=false 1`] = `
<ListItemBase
  interactive={false}
>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="md-list-item-base-wrapper"
        data-allow-text-select={false}
        data-disabled={false}
        data-focused={false}
        data-interactive={false}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="listitem"
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with isDisabled 1`] = `
<ListItemBase
  isDisabled={true}
>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="md-list-item-base-wrapper"
        data-allow-text-select={false}
        data-disabled={true}
        data-focused={false}
        data-interactive={true}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="listitem"
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with isFocused 1`] = `
<ListItemBase
  isFocused={true}
>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="md-list-item-base-wrapper"
        data-allow-text-select={false}
        data-disabled={false}
        data-focused={true}
        data-interactive={true}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="listitem"
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with isSelected 1`] = `
<ListItemBase
  isSelected={true}
>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="md-list-item-base-wrapper active"
        data-allow-text-select={false}
        data-disabled={false}
        data-focused={false}
        data-interactive={true}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="listitem"
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with lang 1`] = `
<ListItemBase
  lang="en-US"
>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="md-list-item-base-wrapper"
        data-allow-text-select={false}
        data-disabled={false}
        data-focused={false}
        data-interactive={true}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        lang="en-US"
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="listitem"
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with role 1`] = `
<ListItemBase
  role="role"
>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="md-list-item-base-wrapper"
        data-allow-text-select={false}
        data-disabled={false}
        data-focused={false}
        data-interactive={true}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="role"
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with shape 1`] = `
<ListItemBase
  shape="isPilled"
>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="md-list-item-base-wrapper"
        data-allow-text-select={false}
        data-disabled={false}
        data-focused={false}
        data-interactive={true}
        data-padded={false}
        data-shape="isPilled"
        data-size={50}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="listitem"
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with size 1`] = `
<ListItemBase
  size={40}
>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="md-list-item-base-wrapper"
        data-allow-text-select={false}
        data-disabled={false}
        data-focused={false}
        data-interactive={true}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="listitem"
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with style 1`] = `
<ListItemBase
  style={
    Object {
      "color": "pink",
    }
  }
>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="md-list-item-base-wrapper"
        data-allow-text-select={false}
        data-disabled={false}
        data-focused={false}
        data-interactive={true}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="listitem"
        style={
          Object {
            "color": "pink",
          }
        }
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;
